--- a/spring-example/pom.xml
+++ b/spring-example/pom.xml
@@ -16,7 +16,7 @@
   <properties>
     <java.version>1.8</java.version>
     <avro.version>1.10.2</avro.version>
-    <apicurio.version>2.0.0-SNAPSHOT</apicurio.version>
+    <apicurio.version>2.0.1.Final</apicurio.version>
   </properties>
 
   <dependencies>
